<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_signup"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/sand"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="ru.spbau.shevchenko.chatbattle.frontend.SignupActivity">

    <TextView
        android:id="@+id/chat_text_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="90dp"
        android:text="@string/chat"
        android:textColor="@color/black"
        android:textSize="25pt" />

    <TextView
        android:id="@+id/battle_text_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="150dp"
        android:text="@string/battle"
        android:textColor="@color/black"
        android:textSize="20pt" />

    <EditText
        android:id="@+id/login_edit"
        android:layout_width="250dp"
        android:layout_height="50dp"
        android:layout_below="@id/battle_text_view"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="45dp"
        android:background="@drawable/rounded_rect"
        android:hint="@string/login"
        android:paddingEnd="0dp"
        android:paddingLeft="8dp"
        android:paddingRight="0dp"
        android:paddingStart="8dp"
        android:textColor="@color/black"
        android:textColorHint="@color/gray"
        android:textSize="8pt" />

    <EditText
        android:id="@+id/password_edit"
        android:layout_width="250dp"
        android:layout_height="50dp"
        android:layout_below="@+id/login_edit"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="3dp"
        android:background="@drawable/rounded_rect"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:paddingEnd="0dp"
        android:paddingLeft="8dp"
        android:paddingRight="0dp"
        android:paddingStart="8dp"
        android:textColor="@color/black"
        android:textColorHint="@color/gray"
        android:textSize="8pt" />

    <EditText
        android:id="@+id/password_confirm_edit"
        android:layout_width="250dp"
        android:layout_height="50dp"
        android:layout_below="@+id/password_edit"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="3dp"
        android:background="@drawable/rounded_rect"
        android:hint="@string/confirm_password"
        android:inputType="textPassword"
        android:paddingEnd="0dp"
        android:paddingLeft="8dp"
        android:paddingRight="0dp"
        android:paddingStart="8dp"
        android:textColor="@color/black"
        android:textColorHint="@color/gray"
        android:textSize="8pt" />

    <EditText
        android:id="@+id/email_edit"
        android:layout_width="250dp"
        android:layout_height="50dp"
        android:layout_below="@+id/password_confirm_edit"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="3dp"
        android:background="@drawable/rounded_rect"
        android:hint="@string/email"
        android:inputType="textEmailAddress"
        android:paddingEnd="0dp"
        android:paddingLeft="8dp"
        android:paddingRight="0dp"
        android:paddingStart="8dp"
        android:textColor="@color/black"
        android:textColorHint="@color/gray"
        android:textSize="8pt" />

    <Button
        android:id="@+id/signup_button"
        style="@style/Widget.AppCompat.Button.Colored"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignEnd="@+id/email_edit"
        android:layout_alignLeft="@+id/email_edit"
        android:layout_alignRight="@+id/email_edit"
        android:layout_alignStart="@+id/email_edit"
        android:layout_below="@+id/email_edit"
        android:layout_marginTop="3dp"
        android:background="@color/red"
        android:text="@string/signup_button"
        android:textColor="@color/white" />

    <TextView
        android:id="@+id/status_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/signup_button" />

</RelativeLayout>
