<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/activity_profile"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:background="@color/yellow">




    <TextView
        android:id="@+id/age_text_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/login_value_view"
        android:textSize="30sp"
        android:text="@string/age_view"/>

    <TextView
        android:id="@+id/sex_text_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/age_text_view"
        android:textSize="30sp"
        android:text="@string/sex_view"/>

    <TextView
        android:id="@+id/rating_text_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/sex_text_view"
        android:textSize="30sp"
        android:text="@string/rating_view"/>

    <TextView
        android:id="@+id/sex_value_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="30sp"
        android:text="@string/not_loaded"
        android:layout_below="@+id/age_value_view"
        android:layout_alignLeft="@+id/age_value_view"
        android:layout_alignStart="@+id/age_value_view" />

    <TextView
        android:id="@+id/rating_value_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="30sp"
        android:text="@string/not_loaded"
        android:layout_below="@+id/sex_value_view"
        android:layout_alignLeft="@+id/sex_value_view"
        android:layout_alignStart="@+id/sex_value_view" />

    <TextView
        android:id="@+id/login_value_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="45sp"
        android:gravity="center"
        android:text="@string/not_loaded"
        android:layout_alignParentTop="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_toEndOf="@+id/rating_text_view"
        android:layout_toRightOf="@+id/rating_text_view"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <TextView
        android:id="@+id/age_value_view"
        android:layout_height="wrap_content"
        android:textSize="30sp"
        android:text="@string/not_loaded"
        android:layout_alignBaseline="@+id/age_text_view"
        android:layout_alignBottom="@+id/age_text_view"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_width="170dp" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/change_password"
        android:id="@+id/change_password_button"
        style="?android:attr/buttonBarButtonStyle"
        android:layout_centerVertical="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

</RelativeLayout>
