<android.support.v4.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/drawer_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/activity_menu"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/sand"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin">

        <ImageButton
            android:id="@+id/menu_drawer_button"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:background="@drawable/ic_drawer"
            android:contentDescription="@string/desc_menu_drawer_button" />

        <TextView
            android:id="@+id/chat_text_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="90dp"
            android:text="@string/chat"
            android:textColor="@color/black"
            android:textSize="25pt" />

        <TextView
            android:id="@+id/battle_text_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/chat_text_view"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="10dp"
            android:text="@string/battle"
            android:textColor="@color/black"
            android:textSize="20pt" />

        <Button
            android:id="@+id/play_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="90dp"
            android:background="@drawable/button_play_normal"
            android:text="@string/play"
            android:textSize="20pt" />

    </RelativeLayout>

    <android.support.design.widget.NavigationView
        android:id="@+id/navigation"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_gravity="start"
        app:headerLayout="@layout/menu_drawer_header"
        app:itemIconTint="@color/black"
        app:itemTextColor="@color/blue900"
        app:menu="@menu/menu_drawer"
        app:theme="@style/Theme.Design.Light" />

</android.support.v4.widget.DrawerLayout>
