<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/drawer_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/activity_battle_list"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/sand"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin">

        <TextView
            android:id="@+id/chat_text_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="20dp"
            android:text="@string/chat"
            android:textColor="@color/black"
            android:textSize="25pt" />

        <TextView
            android:id="@+id/battle_text_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/chat_text_view"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="10dp"
            android:text="@string/battle"
            android:textColor="@color/black"
            android:textSize="20pt" />

        <TextView
            android:id="@+id/battle_list_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/battle_text_view"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="25dp"
            android:text="@string/battle_list"
            android:textColor="@color/black"
            android:textSize="10pt" />

        <ProgressBar
            android:id="@+id/initializing_progress_bar"
            style="?android:attr/progressBarStyleLarge"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:progressDrawable="@drawable/waiting_circular_bar" />

        <android.support.v4.view.ViewPager xmlns:android="http://schemas.android.com/apk/res/android"
            android:id="@+id/pager"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/battle_list_text"
            android:layout_marginBottom="50dp"
            android:layout_marginTop="25dp"
            android:visibility="gone" />

        <Button
            android:id="@+id/update"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:text="@string/update"
            android:textColor="@color/blue800" />

        <TextView
            android:id="@+id/no_chat_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="@string/no_chats"
            android:textColor="@color/black" />

    </RelativeLayout>

    <android.support.design.widget.NavigationView
        android:id="@+id/navigation"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_gravity="start"
        app:headerLayout="@layout/menu_drawer_header"
        app:itemIconTint="@color/black"
        app:itemTextColor="@color/blue900"
        app:menu="@menu/menu_drawer"
        app:theme="@style/Theme.Design.Light" />

</android.support.v4.widget.DrawerLayout>

