<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/drawer_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/activity_search"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/sand"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin">

        <TextView
            android:id="@+id/chat_text_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="90dp"
            android:text="@string/chat"
            android:textColor="@color/black"
            android:textSize="25pt" />

        <TextView
            android:id="@+id/battle_text_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/chat_text_view"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="10dp"
            android:text="@string/battle"
            android:textColor="@color/black"
            android:textSize="20pt" />

        <TextView
            android:id="@+id/search_desc_text_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/battle_text_view"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="40dp"
            android:text="@string/want_to_play"
            android:textColor="@color/black"
            android:textSize="10pt" />

        <LinearLayout
            android:id="@+id/role_choose_button_layout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/search_desc_text_view"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="25dp"
            android:orientation="vertical">

            <Button
                android:id="@+id/search_as_leader_button"
                android:layout_width="220dp"
                android:layout_height="70dp"
                android:layout_gravity="center"
                android:layout_marginBottom="10dp"
                android:layout_marginEnd="20dp"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:layout_marginStart="20dp"
                android:layout_marginTop="10dp"
                android:layout_weight="1"
                android:background="@drawable/button_role"
                android:text="@string/leader_caps"
                android:textColor="@color/white"
                android:textSize="10pt" />

            <Button
                android:id="@+id/search_as_player_button"
                android:layout_width="220dp"
                android:layout_height="70dp"
                android:layout_gravity="center"
                android:layout_marginBottom="10dp"
                android:layout_marginEnd="20dp"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:layout_marginStart="20dp"
                android:layout_marginTop="10dp"
                android:layout_weight="1"
                android:background="@drawable/button_role"
                android:text="@string/player"
                android:textColor="@color/white"
                android:textSize="10pt" />

        </LinearLayout>

        <Button
            android:id="@+id/stop_searching_button"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/role_choose_button_layout"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="0dp"
            android:text="@string/search_screen_stop_searching_button"
            android:textColor="@color/blue900" />

        <ProgressBar
            android:id="@+id/progress_bar"
            style="?android:attr/progressBarStyleLarge"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/search_desc_text_view"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:layout_marginTop="80dp"
            android:indeterminate="false"
            android:progressDrawable="@drawable/waiting_circular_bar" />

    </RelativeLayout>

    <android.support.design.widget.NavigationView
        android:id="@+id/navigation"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_gravity="start"
        app:headerLayout="@layout/menu_drawer_header"
        app:itemIconTint="@color/black"
        app:itemTextColor="@color/blue900"
        app:menu="@menu/menu_drawer"
        app:theme="@style/Theme.Design.Light" />

</android.support.v4.widget.DrawerLayout>
